<resources>
    <string name="app_name">ProjetoIntegradorDigitalHouse</string>
    <string name="label_search_bar">SEARCH</string>
    <string name="character_text_Description">In Spider-Man\'s first story, in Marvel Comics\' Amazing Fantasy, no. 15 (1962), American teenager Peter Parker, a poor sickly orphan, is bitten by a radioactive spider. As a result of the bite, he gains superhuman strength, speed, and agility along with the ability to cling to walls</string>
    <string name="label_comics_list">COMICS</string>
    <string name="label_text_series_list">SERIES</string>
    <string name="label_text_movies_list">MOVIES</string>
    <string name="label_text_characters">CHARACTERS</string>
    <string name="series_text_title">A + X</string>
    <string name="series_text_description">Get ready for action-packed stories featuring team-ups from your favorite Marvel heroes every month! First, a story where Wolverine and Hulk come together, and then Captain America and Cable meet up! But will each partner\'s combined strength be enough?</string>
    <string name="text_movie_title">Black Widow</string>
    <string name="movie_text_description">In Marvel Studios’ action-packed spy thriller “Black Widow,” Natasha Romanoff aka Black Widow confronts the darker parts of her ledger when a dangerous conspiracy with ties to her past arises. Pursued by a force that will stop at nothing to bring her down, Natasha must deal with her history as a spy and the broken relationships left in her wake long before she became an Avenger.</string>
    <string name="text_label_movie_director">Directed by:</string>
    <string name="text_label_movie_release_date">Release date:</string>
    <string name="text_movie_release_date">May 7, 2021</string>
    <string name="sign_in">Sign in</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="not_on_marvel_app_yet">Not on Marvel app yet?</string>
    <string name="full_name">Full Name</string>
    <string name="birth_date">Birth Date</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="register_sucessful">Register sucessful</string>
    <string name="welcome_to_the_marvel_community">welcome to the marvel community</string>
    <string name="home">home</string>
    <string name="sign_in_no_account">Sign In no account</string>
    <string name="facebook_application_id" translatable="false">733817520903883</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb733817520903883</string>
    <string name="edit_perfil">Edit Perfil</string>
</resources>