<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/redBackground">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="384dp"
            android:layout_height="520dp"
            android:src="@drawable/login_retangule"
            android:layout_marginLeft="14dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="14dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textAllCaps="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="14dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:layout_marginTop="10dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:inputType="text">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:hint="@string/birth_date"
                android:layout_marginTop="10dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:inputType="date">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                android:layout_marginTop="10dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginTop="10dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:layout_marginTop="10dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/button_default"
                android:text="Register"
                android:layout_marginTop="30dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"/>

        </LinearLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            style="@style/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </FrameLayout>





</LinearLayout>