<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/redBackground"
    android:orientation="vertical"
    tools:context=".CharacterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--   Search Bar -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCharacterSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconDrawable="@drawable/ic_mjolnifier_blank"
            app:endIconMode="custom"
            app:hintEnabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/redBackground"
                android:inputType="text"
                android:text="@string/label_search_bar"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textIsSelectable="false"
                android:textSize="25sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Search Button            -->
        <ImageButton
            android:id="@+id/ibCharacterSearch"
            style="@style/search_button"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toTopOf="@id/tvCharacterTitle"
            app:layout_constraintEnd_toStartOf="@id/ibCharacterFavoriteYes"
            app:layout_constraintTop_toBottomOf="@+id/tilCharacterSearch" />

        <!--Favorite 'Yes' Button            -->
        <ImageButton
            android:id="@+id/ibCharacterFavoriteYes"
            style="@style/favorite_button_YES"
            android:contentDescription="TODO"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/tvCharacterTitle"
            app:layout_constraintStart_toEndOf="@id/ibCharacterSearch"
            app:layout_constraintTop_toTopOf="@+id/ibCharacterSearch" />

        <!--Favorite 'No' Button            -->
        <ImageButton
            android:id="@+id/ibCharacterFavoriteNO"
            style="@style/favorite_button_NO"
            android:contentDescription="TODO"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@id/tvCharacterTitle"
            app:layout_constraintEnd_toStartOf="@id/ibCharacterShare"
            app:layout_constraintStart_toEndOf="@id/ibCharacterSearch"
            app:layout_constraintTop_toTopOf="@+id/ibCharacterSearch" />

        <!--Share Button            -->
        <ImageButton
            android:id="@+id/ibCharacterShare"
            style="@style/share_button"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toTopOf="@id/tvCharacterTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ibCharacterFavoriteNO"
            app:layout_constraintTop_toTopOf="@+id/ibCharacterSearch" />

        <!--  Character Title   -->
        <TextView
            android:id="@+id/tvCharacterTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Spider Man"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ibCharacterSearch" />

        <!-- Character's Picture        -->
        <ImageView
            android:id="@+id/ivCharacterPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/spider_man"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCharacterTitle" />

        <!-- Character's Desciption        -->
        <TextView
            android:id="@+id/tvCharacterDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:autoSizeTextType="uniform"
            android:text="@string/character_text_Description"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivCharacterPicture" />

        <!-- Label Comics list            -->
        <TextView
            android:id="@+id/tvCharacterComicList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:text="@string/label_comics_list"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/tvCharacterDescription"
            app:layout_constraintStart_toStartOf="@id/tvCharacterDescription"
            app:layout_constraintTop_toBottomOf="@id/tvCharacterDescription" />

        <!-- Comics List            -->
        <com.synnapps.carouselview.CarouselView
            android:id="@+id/cvCharacterComics"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="25dp"
            app:disableAutoPlayOnUserInteraction="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCharacterComicList"
            app:pageTransformer="depth" />

        <!-- Label Series list            -->
        <TextView
            android:id="@+id/tvCharacterSeriesList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:text="@string/label_text_series_list"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/tvCharacterComicList"
            app:layout_constraintStart_toStartOf="@id/tvCharacterComicList"
            app:layout_constraintTop_toBottomOf="@id/cvCharacterComics" />

        <!-- Series List          -->
        <com.synnapps.carouselview.CarouselView
            android:id="@+id/cvCharacterSeries"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            app:disableAutoPlayOnUserInteraction="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCharacterSeriesList"
            app:pageTransformer="depth" />

        <!-- Label Movies list            -->
        <TextView
            android:id="@+id/tvCharacterMoviesList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:text="@string/label_text_movies_list"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/tvCharacterComicList"
            app:layout_constraintStart_toStartOf="@id/tvCharacterComicList"
            app:layout_constraintTop_toBottomOf="@id/cvCharacterSeries" />

        <!-- Movies List          -->
        <com.synnapps.carouselview.CarouselView
            android:id="@+id/cvCharacterMovies"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            app:disableAutoPlayOnUserInteraction="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCharacterMoviesList"
            app:pageTransformer="depth" />




        <!--  Menu - Bottom Navigation       -->
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bnvCharacter"
            style="@style/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/cvCharacterMovies"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


